fix: fix layout issue on mobile

--- a/resources/js/style.scss
+++ b/resources/js/style.scss
@@ -148,6 +148,8 @@
   /* Settings dimensions */
   --settings-width: 100vw;
   --settings-height: 100vh;
+  --settings-width: 100dvw;
+  --settings-height: 100dvh;
 
   /* Status Colors */
   --color-success: rgb(34, 197, 94);
@@ -171,6 +173,7 @@ body {
 
 #app {
   height: 100vh;
+  height: 100dvh;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
